# ece-os-heurtevent-lecoq

./: .gitignore  CMakeLists.txt  README.md
Lab1/: .gitignore  CMakeLists.txt  README.md  main.c  rust_version.rs
Lab2/: .gitignore  CMakeLists.txt  README.md  main.c  process1.c  process2.c  reader  reader.c  receiver.c  sender.c  writer  writer.c
Lab3/: Lab3_HEURTEVENT_LECOQ.docx  Lab3_HEURTEVENT_LECOQ.xlsx  README.md  main.c
Lab4/: .gitignore  README.md  main.c
Lab5/: README.md  main.c
